overlays/noprod/3scale-tenant-testing/products/sample-openid/route-staging.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-openid-staging
spec:
  host: openid-testing-staging.apps.cluster-z44mr.z44mr.sandbox3222.opentlc.com
  to:
    kind: Service
    name: apicast-staging
  tls:
    termination: edge
  path: /
  port:
    targetPort: proxy
